# geolocation_utility

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/geoloc_util/: geoloc_util.py
tests/: conftest.py  test_geoloc_util.py
